--- a/projects/MIR/frontend/sass/Modules/Main/Jumbotron/Air/air.sass
+++ b/projects/MIR/frontend/sass/Modules/Main/Jumbotron/Air/air.sass
@@ -1,4 +1,4 @@
-.t-jumbotronAir
+.t-jumbotron[data-bg="air"]
   background: url("/images/backgrounds/air.png") no-repeat
   .t-frame.t-frameGround
     background-color: #2EB8B8
