--- a/projects/MIR/frontend/sass/Modules/Main/Jumbotron/Ground/ground.sass
+++ b/projects/MIR/frontend/sass/Modules/Main/Jumbotron/Ground/ground.sass
@@ -1,4 +1,4 @@
-.t-jumbotronGround
+.t-jumbotron[data-bg="ground"]
   background: url("/images/backgrounds/ground.png") no-repeat
   .t-frame.t-frameGround
     background-color: #258550
