--- a/projects/MIR/frontend/sass/Modules/Main/Jumbotron/Water/water.sass
+++ b/projects/MIR/frontend/sass/Modules/Main/Jumbotron/Water/water.sass
@@ -1,4 +1,4 @@
-.t-jumbotronWater
+.t-jumbotron[data-bg="water"]
   background: url("/images/backgrounds/water.png") no-repeat
   .t-frame.t-frameGround
     background-color: #496DA3
