--- a/projects/MIR/frontend/sass/main.sass
+++ b/projects/MIR/frontend/sass/main.sass
@@ -18,4 +18,5 @@
 @import "Modules/ForClients/clients"
 @import "Modules/Services/services"
 @import "Modules/Contacts/contacts"
+@import "Modules/KeyFrames/keyFrames"
 @import "Modules/Footer/footer"
