--- a/projects/jtProject/frontend/sass/styleModules/media.sass
+++ b/projects/jtProject/frontend/sass/styleModules/media.sass
@@ -1,5 +1,23 @@
 // Media Hovers
 
+@media (max-width: 1800px)
+  main .t-newsCardWrapper
+    height: 35vmax
+    width: 24.625vmax
+  main .t-newsCard .t-newsCardImg
+    height: 35vmax
+    width: 24.625vmax
+
+
+@media (max-width: 1550px)
+  main .t-newsCardWrapper
+    height: 35vmax
+    width: 23.625vmax
+  main .t-newsCard .t-newsCardImg
+    height: 35vmax
+    width: 23.625vmax
+
+
 @media (min-width: 769px)
   .t-btn:hover
     background-color: $dblue
@@ -43,6 +61,12 @@
     width: 66.689%
   .t-newsModal .t-articleText
     width: 100%
+  main .t-newsCardWrapper
+    height: 41vmax
+    width: 29.625vmax
+  main .t-newsCard .t-newsCardImg
+    height: 41vmax
+    width: 29.625vmax
 
 @media (max-width: 1250px)
   .t-newsModal .t-newsColorBlock
@@ -78,6 +102,12 @@
       padding: 0 25px
     .t-profileSettingsAndInfo
       padding: 0 20px
+  main .t-newsCardWrapper
+    height: 52vmax
+    width: 40.625vmax
+  main .t-newsCard .t-newsCardImg
+    height: 52vmax
+    width: 40.625vmax
 
 
 @media (max-width: 980px)
@@ -90,6 +120,15 @@
     .t-addArticleContainer
       width: 100%
       padding: 0 30px 30px 30px
+
+
+@media (max-width: 850px)
+  main .t-newsCardWrapper
+    height: 60vmax
+    width: 44.625vmax
+  main .t-newsCard .t-newsCardImg
+    height: 60vmax
+    width: 44.625vmax
 
 
 @media (max-width: 800px)
