--- a/projects/MIR/frontend/sass/Modules/Contacts/contacts.sass
+++ b/projects/MIR/frontend/sass/Modules/Contacts/contacts.sass
@@ -1,20 +1,25 @@
 .t-contactsWrapper
   margin-top: 48px
-  .t-contactNumber
-    margin-bottom: 8px
+  .t-officeIn
+    span
+      display: block
+      margin-bottom: 16px
+    h2
+      margin-bottom: 24px
+  .t-forApplicants
+    margin-top: 48px
+    span
+      display: block
+      margin-bottom: 16px
+
 .t-contactsFormWrapper
   margin-top: 48px
   .t-contactsForm
     margin-top: 24px
-    .t-formItem
-      &:not(:last-child)
-        margin-bottom: 24px
-      label
-        display: block
-        margin-bottom: 16px
-  .t-sendingWarning
-    margin-top: 16px
-    width: 272px
+
+.t-contactsInfoWrapper
+  .t-contactsWrapper
+    margin-right: 167px
 
 .t-contacts
   margin-bottom: 0
