--- a/projects/MIR/frontend/sass/Modules/Main/Jumbotron/default.sass
+++ b/projects/MIR/frontend/sass/Modules/Main/Jumbotron/default.sass
@@ -8,7 +8,7 @@
     display: block
     min-height: 100vh
     width: 100%
-    background-position: center center
+    background-position: center center!important
     .t-jumbotronContainer
       position: relative
       z-index: 1
