--- a/projects/jtProject/frontend/sass/_default.sass
+++ b/projects/jtProject/frontend/sass/_default.sass
@@ -2,15 +2,17 @@
   margin: 0
   padding: 0
   box-sizing: border-box
-  cursor: none!important
+  //cursor: none!important
 
 html, body
   font-family: Charter
   color: #333333
-  font-size: 16px
   width: 100%
   min-width: 320px
   min-height: 100vh
+
+html.activeHover
+  cursor: none!important
 
 body
   margin: 0
@@ -41,6 +43,8 @@ body
     top: auto
     right: auto
     bottom: auto
+  &.sticky
+
 
 .t-simpleBlock, .t-mobHeader
   display: none
@@ -70,7 +74,7 @@ body
     .t-backSmallMenuBtn
       display: none
   .t-mobileMenuWrapper
-    transition: .7s ease-in-out
+    transition: .5s ease-in-out
     transition-delay: .2s
     @include forEaseAnim(1, translateX(-150%), none)
   &.t-activeMobileMenu
@@ -172,7 +176,6 @@ svg.t-hoverable
       right: 0
       bottom: -34px
 
-
 .active
   svg
     .t-svgBg
@@ -191,7 +194,6 @@ svg.t-hoverable
   height: 14px
   padding: 10px
   box-sizing: content-box
-  cursor: pointer
   border-radius: 50%
   .line
     display: block
@@ -622,7 +624,6 @@ svg.t-hoverable
   .t-modalShare
     margin-right: 40px
   .t-modalBack
-    cursor: pointer
     display: flex
     align-items: center
     span
