--- a/projects/jtProject/frontend/sass/modules/newsModal.sass
+++ b/projects/jtProject/frontend/sass/modules/newsModal.sass
@@ -91,7 +91,7 @@
     margin-top: 40px
     margin-bottom: 80px
     transition: .3s ease-in-out
-    @include forEaseAnim(0, translateX(-100%), none)
+    @include forEaseAnim(0, translateX(-500px), none)
     &:after
       content: ''
       display: block
@@ -234,3 +234,32 @@
       display: flex
       align-items: center
       justify-content: space-between
+
+
+.t-newsHiddenHeader
+  z-index: 1003
+  background-color: $white
+  height: 80px
+  bottom: auto!important
+  padding: 0 56px 0 16px
+  display: flex
+  align-items: center
+  justify-content: space-between
+  opacity: 0
+  pointer-events: none
+  top: -150%
+  transition: .3s ease-in-out
+  .anotherHiddenLogo
+    padding: 0
+    position: relative
+  .t-modalNewBtnHolderHidden
+    position: relative
+    top: auto
+    left: auto
+    bottom: auto
+    right: auto
+  &.activeThis
+    opacity: 1
+    pointer-events: all
+    top: 0
+    transition: .3s ease-in-out
