--- a/projects/jtProject/frontend/sass/modules/search.sass
+++ b/projects/jtProject/frontend/sass/modules/search.sass
@@ -7,6 +7,7 @@
     margin: 120px auto 0 auto
     width: 600px
     input
+      font-family: Charter
       width: 100%
       border: none
       outline: none
