--- a/projects/MIR/frontend/sass/_default.sass
+++ b/projects/MIR/frontend/sass/_default.sass
@@ -372,6 +372,7 @@ a
   margin: auto
   transform: translateY(-50%)
   z-index: 100
+  animation: dialog .2s linear
   .t-dialogTitleWrapper
     margin-bottom: 24px
 
@@ -391,5 +392,8 @@ a
     right: 40px
     top: 40px
     cursor: pointer
+
+.t-removeTransition
+  transition: none!important
 
 // Default Props End
