--- a/projects/MIR/frontend/sass/Modules/Header/header.sass
+++ b/projects/MIR/frontend/sass/Modules/Header/header.sass
@@ -20,6 +20,30 @@ header
           display: block
           &:first-child
             margin-bottom: .453em
+    .t-languageWrapper
+      margin-top: -10px
+      margin-left: 24px
+      position: relative
+      &.t-languageWrapperBlack
+        .t-languageHolder
+          span
+            color: $secondBlack
+            border-bottom-color: rgba(51, 51, 51, 0.20)
+      &:hover
+        .t-languagePickerWindow
+          opacity: 1
+          pointer-events: all
+      .t-languageHolder
+        span
+          border-bottom: 1px dashed rgba(255,255,255,.2)
+          padding-bottom: 2px
+      .t-languagePickerWindow
+        position: absolute
+        top: -20px
+        left: -20px
+        transition: .4s ease-in-out
+        opacity: 0
+        pointer-events: none
   .t-headerNavigation
     .t-headerNavigationList
       li:not(:last-child)
