--- a/projects/MIR/frontend/sass/Modules/Main/Content/default.sass
+++ b/projects/MIR/frontend/sass/Modules/Main/Content/default.sass
@@ -17,7 +17,7 @@
           span
             color: $green
         span
-          color: $grey
+          color: rgba(0,0,0,.2)
           transition: .3s ease
         &:hover
           span
