--- a/projects/MIR/frontend/sass/Modules/aboutCompany/aboutCompany.sass
+++ b/projects/MIR/frontend/sass/Modules/aboutCompany/aboutCompany.sass
@@ -21,9 +21,13 @@
     line-height: 19px
 
   .t-mainContentContainer
-    .t-aboutGeography, .t-aboutUsInValues, .t-aboutAdvantages, .t-aboutCompanyPartners
+    &.t-mainContentContainerAboutCompany
+      width: 816px
+      margin: 0 auto
+      padding: 0
+    .t-aboutGeography, .t-aboutUsInValues, .t-aboutAdvantages, .t-aboutCompanyPartners, .t-aboutCarPark
       margin-top: 120px
-    .t-aboutGeography
+    .t-aboutGeography, .t-aboutCarPark
       .t-middleTitle
         margin-bottom: 24px
     .t-aboutUsInValues, .t-aboutAdvantages, .t-aboutCompanyPartners
@@ -47,7 +51,9 @@
         .t-gridItemText
           margin-top: 16px
           color: $secondBlack
-
+    .t-aboutCompanyPartners
+      .t-gridItem
+        @include bGrid(3, 9.5%)
 
 
 
