--- a/projects/MIR/frontend/sass/defaultModules/media.sass
+++ b/projects/MIR/frontend/sass/defaultModules/media.sass
@@ -34,3 +34,203 @@
         justify-content: center
         .t-jumbotronContainerRight
           display: none
+
+
+@media (max-width: 1199px)
+  .t-contentContainer .t-containerInside
+    max-width: 100%
+    width: 100%
+    padding: 168px 104px 0 104px
+  .t-groundContent
+    .t-truckAndTrainHolder
+      .t-truck
+        width: 385px
+        height: 295px
+        img
+          max-width: 100%
+          height: auto
+      .t-train
+        width: 100%
+        height: auto
+        img
+          max-width: 100%
+          height: auto
+        .t-contentInfo
+          top: 230px!important
+          left: 535px!important
+    .t-vehiclesHolderAndInfo
+      .t-trailer
+        top: 33px!important
+        left: 225px!important
+        width: 417px
+        height: 194px
+        img
+          max-width: 100%
+          height: auto
+      .t-contentInfo
+        width: 372px!important
+
+@media (max-width: 1110px)
+  header
+    .t-navigationNumber, .t-navigationEmail
+      display: none
+
+
+@media (max-width: 1065px)
+  .t-contentContainer .t-containerInside
+    &.t-containerInsideWater, &.t-containerInsideAir
+      padding: 168px 24px 0
+  .t-aboutJumbotron .t-aboutBlockTitle,
+  .t-mainContentWrapper
+    width: 100%!important
+  .t-aboutJumbotron .t-aboutBlockTitle
+    padding: 80px 50px 27px!important
+  .t-mainContentWrapper .t-continueTop
+    padding: 0 50px!important
+  .t-simpleRightSideMenu
+    margin-right: 24px
+
+
+
+@media (max-width: 980px)
+  header
+    .t-leaveRequest
+      display: none
+  .t-contentContainer .t-containerInside
+    padding: 168px 24px 0
+  .t-waterContent .t-vehiclesHolderAndInfo .t-tanker img,
+  .t-airContent .t-vehiclesHolderAndInfo .t-tanker img
+    max-width: 100%
+    width: 100%!important
+  .t-contentContainer .t-containerInside .t-vehiclesHolderAndInfo .t-contentInfoWithTitle
+    width: 80%!important
+    padding-left: 0!important
+    align-self: flex-start!important
+    margin: 16px auto 0 auto !important
+    border-left: none!important
+  .t-groundContent
+    .t-truckAndTrainHolder
+      .t-train .t-contentInfo
+        top: auto!important
+        right: 0!important
+        bottom: -20px!important
+        left: auto!important
+    .t-vehiclesHolderAndInfo
+      .t-trailer
+        top: 33px!important
+        left: 225px!important
+        width: 417px
+        height: 194px
+        img
+          max-width: 100%
+          height: auto
+      .t-contentInfo
+        width: 372px!important
+        bottom: -20px!important
+        right: -110px!important
+      .t-mobileContentInfoWrapper
+        width: 70%
+        margin: 0 auto
+  .t-mainContentWrapper .t-mainContentContainer.t-mainContentContainerAboutCompany
+    width: 100%!important
+    padding: 0 24px!important
+  .t-aboutJumbotron .t-aboutBlockTitle
+    padding: 80px 24px 27px!important
+  .t-mainContentWrapper .t-continueTop
+    padding: 0 24px!important
+
+@media (max-width: 800px)
+  .t-frame
+    display: none
+  header
+    .t-headerNavigation
+      display: none
+  .t-contentContainer .t-containerInside .t-tabsSwitch
+    li:not(:first-child)
+      display: none
+  .t-mainContentWrapper .t-mainContentContainer
+    .t-aboutAdvantages .t-gridItem
+      @include bGrid(2, 5%)
+    .t-aboutCompanyPartners
+      .t-gridItem
+        @include bGrid(2, 5%)
+    .t-aboutUsInValues
+      .t-gridItem
+        @include bGrid(2, 5%)
+
+@media (max-width: 710px)
+  .t-groundContent .t-truckAndTrainHolder .t-truck
+    width: 250px
+    height: auto
+    margin-left: 65px
+  .t-groundContent .t-vehiclesHolderAndInfo .t-trailer
+    left: 210px!important
+    width: 285px
+    height: auto
+    top: 19px!important
+  .t-typeSection .t-jumbotron .t-jumbotronContainer
+    .t-jumbotronContainerInfo
+      width: 100%!important
+      padding: 0 24px
+      .t-jumbotronContainerInfoTitle
+        font-size: 55px
+        font-weight: 900
+    .t-jumbotronContainerBtHolder
+      padding: 0 24px
+
+@media (max-width: 670px)
+  .t-containerInside .t-containerInsideTitle
+    font-size: 20px
+    font-weight: 900
+  .t-groundContent .t-vehiclesHolderAndInfo .t-mobileContentInfoWrapper
+    width: 95%
+  .t-contentContainer .t-containerInside .t-tabsSwitch
+    li
+      font-size: 20px
+      font-weight: 300
+
+@media (max-width: 600px)
+  .t-groundContent .t-vehiclesHolderAndInfo .t-mobileContentInfoWrapper
+    width: 87%
+  .t-groundContent .t-vehiclesHolderAndInfo .t-trailer
+    left: 175px!important
+  .t-groundContent .t-truckAndTrainHolder .t-truck
+    margin-left: 30px
+
+@media (max-width: 510px)
+  .t-groundContent .t-truckAndTrainHolder .t-truck
+    width: 163px!important
+    height: 125px!important
+    margin-left: 0!important
+  .t-groundContent .t-vehiclesHolderAndInfo .t-trailer
+    width: 157px!important
+    height: 65px!important
+    left: 98px!important
+    top: 22px!important
+  .t-contentContainer .t-containerInside .t-vehiclesHolderAndInfo .t-contentInfoWithTitle
+    width: 100%!important
+  .t-groundContent .t-vehiclesHolderAndInfo .t-mobileContentInfoWrapper
+    width: 100%
+    .t-mobileContentInfo
+      font-size: 16px
+      font-weight: 300
+
+@media (max-width: 480px)
+  .t-typeSection .t-jumbotron .t-jumbotronContainer
+    .t-jumbotronContainerInfo
+      .t-jumbotronContainerInfoTitle
+        font-size: 32px
+        font-weight: 900
+      .t-jumbotronContainerInfoSubTitle
+        font-size: 26px
+        font-weight: 100
+        line-height: normal!important
+  .t-typeSection .t-jumbotron .t-jumbotronContainer .t-jumbotronContainerBtHolder
+    display: flex
+    flex-direction: column
+    .t-btn
+      margin: 0
+      width: 100%
+      text-align: center
+      &:not(:last-child)
+        margin-bottom: 24px
