--- a/projects/MIR/frontend/sass/Modules/Main/Content/default.sass
+++ b/projects/MIR/frontend/sass/Modules/Main/Content/default.sass
@@ -7,6 +7,7 @@
     max-width: 1112px
     z-index: 1
     padding-top: 168px
+    height: 100vh
     .t-tabsSwitch
       margin-top: 24px
       li
