--- a/projects/MIR/frontend/sass/Modules/KeyFrames/keyFrames.sass
+++ b/projects/MIR/frontend/sass/Modules/KeyFrames/keyFrames.sass
@@ -3,3 +3,21 @@
     opacity: 0
   to
     opacity: 1
+
+
+@keyframes menu
+  from
+    opacity: 0
+    transform: scale(.95)
+  to
+    opacity: 1
+    transform: none
+
+@keyframes out-menu
+  from
+    opacity: 1
+    transform: none
+
+  to
+    opacity: 0
+    transform: scale(.95)
