--- a/projects/MIR/frontend/sass/Modules/Main/Content/Water/water.sass
+++ b/projects/MIR/frontend/sass/Modules/Main/Content/Water/water.sass
@@ -3,9 +3,11 @@
   .t-frame
     background: linear-gradient(0deg, rgba(255, 255, 255, 0.5), rgba(255, 255, 255, 0.5)), url("/images/backgrounds/water.png") no-repeat
     background-position: center center
-    clip-path: polygon(0% 0%, 75% 0%, 100% 51%, 75% 100%, 0% 100%)
-    -webkit-clip-path: polygon(0% 0%, 75% 0%, 100% 51%, 75% 100%, 0% 100%)
+    -webkit-clip-path: polygon(0 0, 50% 0, 100% 50%, 50% 100%, 0% 100%)
+    clip-path: polygon(0 0, 50% 0, 100% 50%, 50% 100%, 0% 100%)
     z-index: -1
+    width: 280px
+    mix-blend-mode: unset
   .t-vehiclesHolderAndInfo
     .t-contentInfo
       top: 255px
