--- a/projects/MIR/frontend/sass/Modules/aboutCompany/aboutCompany.sass
+++ b/projects/MIR/frontend/sass/Modules/aboutCompany/aboutCompany.sass
@@ -14,6 +14,10 @@
     .t-middleTitle
       line-height: 38px
 .t-mainContentWrapper
+  .t-mobileThisTitle
+    padding: 0 24px
+    margin-top: 24px
+    margin-bottom: 24px
   .t-continueTop
     padding: 0 116px 0 116px
     font-size: 16px
