--- a/projects/MIR/frontend/sass/_default.sass
+++ b/projects/MIR/frontend/sass/_default.sass
@@ -97,6 +97,8 @@ a
       .t-accordItemArrow
         svg
           transform: rotate(180deg)
+    .t-accordItemArrow
+      margin-left: 16px
   .t-vacancyName
     line-height: 30px
     margin-bottom: 4px
@@ -127,7 +129,40 @@ a
 .t-insideJumbotron
   width: 100%
   height: 600px
+  .t-mobileSubMenuHolder
+    position: absolute
+    left: 0
+    right: 0
+    top: 104px
+    text-align: center
+    margin-bottom: 0
+    .t-mobileSubMenu
+      width: 70%
 
+.t-mobileSubMenuHolder
+  margin-bottom: 24px
+  .t-mobileSubMenu
+    appearance: none
+    background-color: transparent
+    color: $dblue
+    border-radius: 0
+    padding: 16px 14px
+    font-size: 12px
+    font-weight: 500
+    line-height: 14px
+    outline: none
+    border-color: $dblue
+    width: 100%
+    background: url("/images/icons/SVG-optim/dropBlueArrow.svg") no-repeat 96% center
+
+
+
+.t-coloredSubMenu
+  .t-mobileSubMenuHolder
+    .t-mobileSubMenu
+      color: $white
+      border-color: $white
+      background: url("/images/icons/SVG-optim/dropWhiteArrow.svg") no-repeat 96% center
 
 .t-right
   float: right
@@ -192,6 +227,8 @@ a
     align-self: flex-end
   &.t-flexWrap
     flex-wrap: wrap
+  &.t-flexAlignItemsEnd
+    align-items: flex-end
 
 
 .t-logoColorful
@@ -407,6 +444,34 @@ a
   animation: dialog .2s linear
   .t-dialogTitleWrapper
     margin-bottom: 24px
+  .t-grid
+    .t-gridItem
+      text-align: left
+      @include bGrid(2, 2.8%)
+      input
+        &::placeholder
+          color: $grey
+          font-size: 16px
+          font-weight: 300
+          line-height: 19px
+
+.t-makeOrderDialog
+  max-width: 640px
+  width: 100%
+  .t-dialogTitleWrapper
+    margin-bottom: 40px
+  .t-grid
+    .t-gridItem
+      &:not(:last-child)
+        margin-bottom: 40px
+      &:last-child
+        width: 100%
+        input
+          width: 100%
+  .t-sendingWarning
+    width: 100%
+    margin-top: 0
+    margin-left: 16px
 
 .t-overlay
   position: fixed
@@ -458,5 +523,89 @@ a
     border-left: 0 solid transparent
     border-top: 50vh solid transparent
     transform: none
+
+
+.t-barsWrapper
+  display: none
+  cursor: pointer
+  width: 40px
+  height: 26px
+  position: relative
+  margin-top: -8px
+  .t-bars
+    position: absolute
+    background: $white
+    width: 100%
+    height: 2px
+    opacity: 1
+    top: 0
+    left: 0
+    right: 0
+    bottom: 0
+    margin: auto
+    &:before, &:after
+      position: absolute
+      background: $white
+      width: 100%
+      height: 2px
+      content: ""
+      display: block
+    &:before
+      top: -20px
+      left: 0
+      right: 0
+      bottom: 0
+      margin: auto
+    &:after
+      top: 0
+      left: 0
+      right: 0
+      bottom: -20px
+      margin: auto
+  &.t-barsBlue
+    .t-bars
+      background-color: $dblue
+      &:before, &:after
+        background-color: $dblue
+
+.t-closeWrapper
+  position: relative
+  width: 24px
+  height: 24px
+  cursor: pointer
+  margin-right: 7px
+  .t-close
+    &:before
+      content: ''
+      display: block
+      position: absolute
+      left: 0
+      top: 0
+      bottom: 0
+      right: 0
+      margin: auto
+      width: 100%
+      height: 2px
+      border-radius: 2px
+      background-color: $dblue
+      transform: rotate(45deg)
+    &:after
+      content: ''
+      display: block
+      position: absolute
+      left: 0
+      top: 0
+      bottom: 0
+      right: 0
+      margin: auto
+      width: 100%
+      height: 2px
+      border-radius: 2px
+      background-color: $dblue
+      transform: rotate(-45deg)
+
+
+.t-employeesContainer, .t-vacancy, .t-clients, .t-contacts
+  position: static
 
 // Default Props End
