--- a/projects/MIR/frontend/sass/Modules/Main/Content/Ground/ground.sass
+++ b/projects/MIR/frontend/sass/Modules/Main/Content/Ground/ground.sass
@@ -13,8 +13,14 @@
   .t-vehiclesHolderAndInfo
     .t-trailer
       position: absolute
-      top: 42px
-      left: 310px
+      top: 13%
+      left: 28%
+      width: 36.2668rem
+      max-width: 50%
+      height: auto
+      img
+        max-width: 100%
+        height: auto
     .t-train
       position: relative
       .t-contentInfo
@@ -23,6 +29,14 @@
         bottom: auto
   .t-truckAndTrainHolder
     position: relative
+    .t-truck
+      width: 33.4937rem
+      max-width: 50%
+      height: auto
+      img
+        max-width: 100%
+        height: auto
+
     .t-train
       top: 0
       left: 0
