--- a/projects/MIR/frontend/sass/Modules/Main/default.sass
+++ b/projects/MIR/frontend/sass/Modules/Main/default.sass
@@ -127,3 +127,5 @@ main
   &.t-groundFrame
     background: linear-gradient(0deg, rgba(255, 255, 255, 0.8), rgba(255, 255, 255, 0.8)), url("/images/backgrounds/ground.png") no-repeat
     background-position: center center
+    background-size: cover
+    z-index: -1
