--- a/projects/MIR/frontend/sass/_default.sass
+++ b/projects/MIR/frontend/sass/_default.sass
@@ -295,7 +295,8 @@ a
 
 .t-mainContentWrapper
   width: 1000px
-  margin: 0 auto 200px auto!important
+  margin: 0 auto!important
+  height: 100%
 
 .t-mainContentContainer
   padding: 0 116px
@@ -606,6 +607,11 @@ a
 
 
 .t-employeesContainer, .t-vacancy, .t-clients, .t-contacts
-  position: static
+  margin-bottom: 0!important
+  padding-bottom: 200px!important
+
+.t-divMainWrap
+  position: relative
+
 
 // Default Props End
